manifests/jellyfin-private/tailscale-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-ts-lb
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  selector:
    app: jellyfin-private
  ports:
    - protocol: TCP
      port: 8096 
      targetPort: 8096
