manifests/jellyfin-private/jellyfin-ts-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-ts-ingress
  namespace: jellyfin-private
spec:
  ingressClassName: tailscale
  rules:
    - host: jellyfin.hydra-cliff.ts.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin-private
                port:
                  number: 8096
